--- a/style.css
+++ b/style.css
@@ -18,6 +18,149 @@
     --colorh: #506AD4;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.wrapper-menu{
+    visibility: hidden;
+}
+
+
+
+
+.navbar {
+    width: 300px;
+    height: 100%;
+    background-color: var(--colorh);
+    border: 3px solid rgba(0, 0, 0, .4);
+    position: fixed;
+    top: 0;
+    right: -300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20% 0 0 60%;
+    transition: right 0.8s cubic-bezier(1, 0, 0, 1);
+  }
+  
+  .change {
+    right: 0;
+    z-index: 999;
+  }
+  
+  .hamburger-menu {
+    width: 35px;
+    height: 30px;
+    position: fixed;
+    top: 50px;
+    right: 50px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    z-index: 1001;
+  }
+  
+  .line {
+    width: 100%;
+    height: 3px;
+    background-color: #FFF447;
+    box-shadow: .3px .3px 1px black;
+    transition: all 0.8s;
+  }
+  
+  .change .line-1 {
+    transform: rotateZ(-405deg) translate(-8px, 6px);
+  }
+  
+  .change .line-2 {
+    opacity: 0;
+  }
+  
+  .change .line-3 {
+    transform: rotateZ(405deg) translate(-8px, -6px);
+  }
+  
+  .nav-list {
+    text-align: right;
+  }
+  
+  .nav-item {
+    list-style: none;
+    margin: 25px;
+  }
+  
+  .nav-link {
+    text-decoration: none;
+    font-size: 22px;
+    color: #eee;
+    font-family: var(--font-action);
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    position: relative;
+    padding: 3px 0;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
+  }
+  
+  .nav-link::before,
+  .nav-link::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background-color: #eee;
+    position: absolute;
+    left: 0;
+    transform: scaleX(0);
+    transition: transform 0.5s;
+  }
+  
+  .nav-link::after {
+    bottom: 0;
+    transform-origin: right;
+  }
+  
+  .nav-link::before {
+    top: 0;
+    transform-origin: left;
+  }
+  
+  .nav-link:hover::before,
+  .nav-link:hover::after {
+    transform: scaleX(1);
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .head {
     display: flex;
     background-color: #1A1A1A;
@@ -111,6 +254,7 @@
     height: 100%;
     object-fit: cover;
     opacity: 0.6;
+    filter: blur(2px) contrast(130%);
 }
 
 .img-wrapper-casa{
@@ -206,7 +350,7 @@
     line-height: 2.6rem;    
     top: 15rem;
     left: 5rem;
-    background-color: rgba(0, 0, 0, .8);    
+    background-color: rgba(0, 0, 0, .9);    
     border-radius: 15px;
     padding: 1rem;
     z-index: 1;
@@ -320,7 +464,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, .9);
     border-radius: 15px;
 }
 
@@ -334,7 +478,7 @@
     font-weight: 300;
     font-size: 1.5rem;
     padding: 15px;
-    color: #eee;
+    color: white;
 }
 
 /* ////////////////////////////////////////////////////////////////////////*/
@@ -456,6 +600,7 @@
     grid-row: 17 / 20;
 } 
 
+/*///////////////////////////////////////////////////////////////////////////*/
 
 
 
@@ -489,10 +634,10 @@
 
 .titulo h1{
     word-spacing: 5px;
-    color: black;
+    color: #252623;
     font-size: 2rem;
     font-family: var(--font-primary);
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, .6);
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
     text-transform: uppercase;
 }
 
@@ -548,6 +693,7 @@
     padding: 10px;
     background-color: var(--colorh) ;
     border-radius: 15px;
+    
 }
 
 .item button a {
@@ -569,8 +715,8 @@
     flex-direction: column;
     padding: 10px;
     border-radius: 15px;
-    background-color: rgba(0, 0, 0, .7);
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, .9);
 }
 
 
@@ -585,7 +731,12 @@
 }
 
 .grid > div:nth-child(3){
-    grid-column: 5 / 7;
+    grid-column: 3 / 5;
+    grid-row: 8 / 14;
+}
+
+.grid > div:nth-child(4){
+    grid-column: 7 / 9;
     grid-row: 8 / 14;
 }
 
@@ -593,7 +744,7 @@
 .grid h1{
     font-family: var(--font-primary);
     font-size: 2rem;
-    color: #eee;
+    color: #F2CC39;
     text-shadow: 2px 2px 3px black;
 }
 
@@ -646,7 +797,7 @@
 
 .footer {
     width: 100%;
-    height: 10rem;
+    height: 13rem;
     background-color:#1A1A1A;
 }
 
@@ -673,10 +824,12 @@
 }
 
 .text-footer {
+    margin-top: 10px;
+    
     flex-wrap: nowrap;
     display: flex;
     justify-content: center;
-    width: 25%;
+    width: 50%;
     align-items: center;
 }
 
@@ -691,9 +844,9 @@
 .agrad {
     align-items: center;
     flex-wrap: nowrap;
-    margin-top: 10px;
+    margin-top: 20px;
     display: flex;
-    width: 15%;
+    width: 50%;
 }
 
 .agrad p{
@@ -703,6 +856,7 @@
 }
 
 .agrad a{
+    font-size: 1.3rem;
     color: #eee;
 }
 
@@ -728,6 +882,62 @@
 
 @media screen and (max-width: 768px){
 
+    .text-footer{
+        margin-top: 0;
+    }
+
+    .agrad{
+        margin-top: 20px;
+        width: 30%;
+    }
+
+    .agrad a{
+        font-size: 1rem;
+    }
+
+    .item:nth-child(3) {
+        margin-bottom: 10px;
+    }
+
+    .item:nth-child(4) {
+        margin-bottom: 10px;
+    }
+
+    .wrapper-menu{
+        visibility: visible;
+    }
+
+    .navbar {
+        width: 200px;
+    }
+
+    .nav-link{
+        font-size: 1rem;
+    }
+
+    .hamburger-menu {
+        width: 25px;
+        height: 20px;
+        top: 45px;
+        right: 30px;
+    }
+
+    
+
+    .change .line-1 {
+        transform: rotateZ(-405deg) translate(-3px, 6px);
+      }
+      
+      .change .line-2 {
+        opacity: 0;
+      }
+      
+      .change .line-3 {
+        transform: rotateZ(405deg) translate(-3px, -6px);
+      }
+
+
+
     .menu {
 
         background: #C6FFDD;  /* fallback for old browsers */
@@ -736,12 +946,15 @@
         
     }
     .menu ul li img {
-        height: 40px;
-        width: 50px;
+        height: 30px;
+        width: 40px;
        position: absolute;
        left: 10px;
        top: 40px;
     }
+    
+
+
 
     .menu ul{
         width: 100%;
@@ -757,13 +970,13 @@
         padding: 0;
         line-height: 0;
         margin: 0;
-        height: 10px;
+        height: 0;
         padding: 5px;
         
     }
 
     .menu ul li a {
-        
+        visibility: hidden;
         margin-bottom: 20px;
         font-size: 1rem;
         
@@ -866,7 +1079,7 @@
         line-height: 13px;
         width: 60%;
         padding: 0;
-        margin: 0;
+        margin-top: 30px;
     }
 
     .options img {
@@ -890,7 +1103,7 @@
     }
 
     .titulo {
-        height: 3rem;
+        height: 2rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -901,6 +1114,7 @@
     }
 
     .titulo h1 {
+        line-height: .9rem;
         margin: 0 5px 0 5px;
         font-size: 1.1rem;
     }
@@ -917,6 +1131,154 @@
         margin: 0 5px 0 5px;
     }
 
+
+    .grid-passo {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(18, 4rem);
+        row-gap: 0.5rem;
+        margin: 30px;
+
+    }
+
+    .item-passo img{
+        width: 32px;
+        height: 32px;
+    }
+
+    .item-passo h1{
+        padding: 0;
+        margin: 10px;
+        font-size: 1rem;
+    }
+
+    .item-passo p{
+        font-size: 1rem;
+    }
+
+
+    .item button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+   
+
+    .item button a {
+        text-align: center;
+        padding: 5px;
+        color: #eee;
+        font-family: var(--font-action);
+        font-size: 0.8rem;
+        font-weight: 500;
+        text-shadow: 1px 1px 2px black;
+    }
+
+
+
+
+/******************************************************************************/
+    @media screen and (max-width: 588px){
+        .item-passo h1{
+            font-size: 0.9rem;
+        }
+        .item-passo p{
+            font-size: 0.7rem;
+        }
+    }
+
+    @media screen and (max-width: 360px){
+        .item-passo img{
+            width: 24px;
+            height: 24px;
+        }
+        .item-passo h1{
+            font-size: 0.7rem;
+        }
+        .item-passo p{
+            font-size: 0.6rem;
+        }
+    }
+
+/******************************************************************************/
+    .grid-passo >div:nth-child(1){
+    
+        grid-column: 1 / 7;
+        grid-row: 1 / 3;
+    }
+    
+    .grid-passo >div:nth-child(2){
+        
+        
+        grid-column: 1 / 7;
+        grid-row: 3 / 5;
+    }
+    
+    .grid-passo >div:nth-child(3){
+        
+       
+        grid-column: 1 / 7;
+        grid-row: 5 / 7;
+    }
+    
+    .grid-passo >div:nth-child(4){
+        
+        
+        grid-column: 1 / 7;
+        grid-row: 7 / 9;
+    }
+    
+    .grid-passo >div:nth-child(5){
+        
+        grid-column: 1 / 7;
+        grid-row: 9 / 11;
+    }
+    
+    .grid-passo >div:nth-child(6){
+        
+        grid-column: 1 / 7;
+        grid-row: 11 / 13;
+    }
+    
+    .grid-passo >div:nth-child(7){   
+        grid-column: 1 / 7;
+        grid-row: 13 / 15;
+    }
+    
+    .grid-passo >div:nth-child(8){
+         
+        grid-column: 1 / 7;
+        grid-row: 15 / 17;
+    }
+    
+    .grid-passo >div:nth-child(9){
+        
+        
+        grid-column: 1 / 7 ;
+        grid-row: 17 / 19;
+    } 
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     .grid {
         display: grid;
         grid-template-columns: repeat(7, 1fr);
@@ -925,10 +1287,11 @@
         outline: none;
         background: url(imagens/fundo.png) center center no-repeat;
         background-size: cover;
-
+        
     }
 
     .item button {
+        
         margin-top: 10px;
         padding: 0;
     }
@@ -948,9 +1311,14 @@
         grid-column: 5 / 7;
         grid-row: 1 / 5;
     }
-    
+
     .grid > div:nth-child(3){
-        grid-column: 3 / 6;
+        grid-column: 2 / 4;
+        grid-row: 5 / 9;
+    }
+    
+    .grid > div:nth-child(4){
+        grid-column: 5 / 7;
         grid-row: 5 / 9;
     }
     
@@ -988,8 +1356,8 @@
 
 
     .grid .item{
-        box-shadow: none;
-        background-color: rgba(0, 0, 0, .6);
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
+        background-color: rgba(0, 0, 0, .9);
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -1053,6 +1421,35 @@
 
 @media screen and (max-width: 454px){
     
+    .hamburger-menu {
+        width: 25px;
+        height: 20px;
+        top: 35px;
+        right: 30px;
+    }
+
+    .menu ul li img {
+        height: 30px;
+        width: 40px;
+       position: absolute;
+       left: 10px;
+       top: 30px;
+    }
+
+    .text2-header {
+        border-radius: 0;
+        width: 101%;
+    }
+
+    .head {
+        height: 1.1rem;
+        align-items: center;
+    }
+    
+    .head a {
+        font-size: 0.7rem;
+    }
+    
     .text-header {    
             
         display: flex;
@@ -1067,6 +1464,7 @@
     }
 
     .text2-header{
+        margin-bottom: 30px;
         line-height: 1.5rem;
     }
 
@@ -1121,6 +1519,7 @@
     .titulo h1 {
         font-size: 0.8rem;
     }
+    
 }
 
 @media screen and (max-width: 302px){
